# NNStockChess

./: .gitmodules  CMakeLists.txt  XORNet.nb  stockmod.patch
src/: main.cpp  nn_linalg.hpp  traindata.cpp  traindata.hpp  trainer.cpp  trainer.hpp  xornet.cpp
src/murmurhash/: MurmurHash3.cpp
